--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div class="card-body">
           <h5 class="card-title">Laptop Gamer Intel + Smartphone</h5>
           <div class="inputs-container">
-              <input class="inputs-decoration" placeholder="Cantidad"></input>
+              <input id="quantity-products" class="inputs-decoration" placeholder="Cantidad"></input>
               <select class="inputs-decoration"  id="inputState" class="form-select">
                 <option selected>Choose...</option>
-                <option>Black</option>
-                <option>Blue</option>
-                <option>Silver</option>
-                <option>White</option>
+                <option id="black-color">Black</option>
+                <option id="blue-color">Blue</option>
+                <option id="silver-color">Silver</option>
+                <option id="green-color">Green</option>
               </select>
           </div>
-          <h3 >Precio: 320.000</h3>
+          <h3 >Precio: $<span id="price"></span></h3>
         </div>
         <div class="card-bottom">
           <button onclick="probando()">Calcular Total</button>
