Change the function name and add the format number system

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
           <h3 >Precio: $<span id="price"></span></h3>
         </div>
         <div class="card-bottom">
-          <button onclick="probando()">Calcular Total</button>
+          <button onclick="operateTotal()">Calcular Total</button>
         </div>
       </div>
       <div class="results">
-        <p>Total: <span id="total"></span></p>
+        <p>Total: $<span id="total"></span></p>
         <p>Cantidad: <span id="quantity"></span></p>
         <p>Color: <span class="border-form" id="border-color">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
       </div>
